# Ruzino-Homework

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  configure.py  test_opacity.ps1
.github/workflows/: build.yml
cmake/: AddLibrary.cmake  AddNodes.cmake
prompts/: test_instructions.md
scripts/: run_all_tests.py  setup_nvapi_headers.ps1
source/Core/: CMakeLists.txt
source/Core/GPUContext/: CMakeLists.txt
source/Core/RHI/: CMakeLists.txt
source/Core/Solver/: CMakeLists.txt
source/Core/rzsim/: CMakeLists.txt
source/Editor/: CMakeLists.txt
source/Editor/GUI/: CMakeLists.txt
source/Editor/blueprints/: CMakeLists.txt
source/Editor/geometry/: CMakeLists.txt  GOP.cpp  PointsComponent.cpp  create_geom.cpp
source/Editor/geometry_nodes/: CMakeLists.txt  GPU_sph.cpp  hw10_sph_fluid.cpp  hw5_boundary_map.cpp  hw5_param.cpp  hw6_arap.cpp  hw8_node_mass_spring.cpp  hw9_node_mass_spring.cpp  node_colormap.cpp  node_create_geom.cpp  node_curve_to_mesh.cpp  node_geom_distances.cpp  node_get_current_usd_path.cpp  node_print_debug_info.cpp  node_read_obj.cpp  node_read_usd.cpp  node_reserve_verts.cpp  node_select_verts.cpp  node_set_texture.cpp  node_set_value.cpp  node_write_usd.cpp
source/Editor/rzpython/: CMakeLists.txt
source/Plugins/: CMakeLists.txt
source/Plugins/hd_RUZINO_Embree/: CMakeLists.txt  integrator.cpp  integrator.h  light.cpp  light.h  material.cpp  renderer.cpp  texture.cpp  texture.h
source/Plugins/hd_RUZINO_Embree/integrators/: path.cpp
source/Plugins/hd_RUZINO_GL/: api.h  light.cpp  material.cpp  node_exec_eager_render.cpp  node_exec_eager_render.hpp  renderBuffer.cpp  renderDelegate.cpp  renderer.cpp
source/Plugins/hd_USTC_CG_Embree/: CMakeLists.txt  light.cpp  (+3 more)
source/Runtime/stage/: CMakeLists.txt
source/Runtime/stage/include/stage/: stage.hpp
source/Runtime/stage/python/: stage.cpp
source/Runtime/stage/source/: animation.cpp  animation.h  stage.cpp
source/Runtime/stage/tests/: test_interoperate.py
tests/application/: CMakeLists.txt  Ruzino.cpp  USTC_CG.cpp  USTC_CG_polyscope.cpp  headless_geom_node_executor.cpp  headless_render.cpp  node_editor.cpp
(+306 files in other folders)
